# lobotomy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: price_map_bench.rs
src/: lib.rs
src/app/: binance.rs  binance_robot.rs  nasdaq_robot.rs  nasdaq_robot_v2.rs
src/binance/: depth_delta_decoder.rs  depth_diff_decoder.rs  limit_order_book.rs  mod.rs  restore_manager.rs
src/common/: byte_array_reader.rs  communication.rs  heap_invocable.rs  intrinsics.rs  mod.rs  object_pool.rs  stack_invocable.rs  types.rs  utils.rs  websocket_listener.rs
src/draft/: mod.rs
src/draft/moex_simba/: mod.rs  moex_simba.rs  types.rs
src/draft/moex_spectra_simba/: Cargo.toml
src/draft/moex_spectra_simba/src/: best_prices_codec.rs  decimal_2null_codec.rs  decimal_5_codec.rs  decimal_5null_codec.rs  discrete_auction_codec.rs  empty_book_codec.rs  flags_set.rs  group_size_codec.rs  heartbeat_codec.rs  lib.rs  logon_codec.rs  logout_codec.rs  market_data_request_codec.rs  market_segment_id.rs  md_entry_type.rs  (+19 more)
src/nasdaq/: itch_into_l2_deltas.rs  itch_wrappers.rs  mod.rs
src/nasdaq/v2/: itch_l2_book_builder.rs  mod.rs
src/net/: ethernet.rs  ip.rs  mod.rs  udp.rs
src/order_book/: l2_book.rs  l2_book_builder.rs  l2book.rs  l2book_builder.rs  limit_order_book.rs  mod.rs  price_hasher.rs  price_map.rs  price_top.rs
src/order_book/docs/: l2_book_from_l3.md
src/order_book/v1/: l2_book_builder.rs  price_hasher.rs  price_map.rs
src/order_book/v2/: l2_book.rs  l2_book_builder.rs  mod.rs
tests/: moex_simba_test.rs  price_map_test.rs
