[package]
name = "lobotomy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-parser = "0.14.1"
rand = "0.8.5"
moex_spectra_simba = { path = "./src/draft/moex_spectra_simba" }
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["blocking"] }
core_affinity = "0.8.1"
tick_counter = "0.4.5"
fast_log = "1.6.9"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
more-asserts = "0.3.1"
arrayvec = "0.7.4"

[[bin]]
name = "binance_robot"
path = "src/app/binance_robot.rs"

[profile.release]
debug = false
opt-level = 3
